--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
       
-    - name: Set up Docker Buildx
+    - name: Set up Docker Buildx #for different os arch
       uses: docker/setup-buildx-action@v1
       
     - name: Login to Azure Container Registry
@@ -30,7 +30,7 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: myacr.azurecr.io/my-nodejs-app:latest
+        tags: acr.azurecr.io/my-nodejs-app:latest
 
     - name: Deploy to AKS
       uses: Azure/k8s-deploy@v1
