--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: nodejs-app
-          image: myacr.azurecr.io/my-nodejs-app:latest
+          image: acr.azurecr.io/my-nodejs-app:latest
           ports:
             - containerPort: 3000
