--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,41 +1,96 @@
+
 name: CI/CD
 
 on:
-  push:
-    branches:
-      - master
-      - develop
+  workflow_dispatch:
+    inputs:
+      branch:
+        description: 'Branch to deploy'
+        required: true
+        default: 'main'
+        choices: ['main', 'develop']
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
+    - name: Checkout Repository
       uses: actions/checkout@v2
-      
-    - name: Set up Docker Buildx #for different os arch
-      uses: docker/setup-buildx-action@v1
-      
-    - name: Login to Azure Container Registry
-      uses: azure/docker-login@v1
-      with:
-        login-server: myacr.azurecr.io
-        username: ${{ secrets.ACR_USERNAME }}
-        password: ${{ secrets.ACR_PASSWORD }}
 
-    - name: Build and push Docker image
+    - name: Build and Push Docker Image
       uses: docker/build-push-action@v2
       with:
         context: .
-        file: ./Dockerfile
         push: true
-        tags: acr.azurecr.io/my-nodejs-app:latest
+        tags: your-azure-registry.azurecr.io/node-app:latest
+        login-server: your-azure-registry.azurecr.io
+        username: ${{ secrets.ACR_USERNAME }}
+        password: ${{ secrets.ACR_PASSWORD }}
 
-    - name: Deploy to AKS
-      uses: Azure/k8s-deploy@v1
+    - name: Azure Login
+      uses: azure/login@v1
       with:
-        kubeconfig: ${{ secrets.KUBE_CONFIG }}
-        manifests: |
-          k8s/deployment.yaml
-          k8s/service.yaml
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: Set AKS Cluster Name
+      id: set-cluster-name
+      run: |
+        if [ "${{ github.event.inputs.branch }}" == "main" ]; then
+          echo "::set-output name=cluster-name::main-cluster-name"
+        else
+          echo "::set-output name=cluster-name::develop-cluster-name"
+        fi
+
+    - name: Azure AKS Set Context
+      uses: azure/aks-set-context@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+        cluster-name: ${{ steps.set-cluster-name.outputs.cluster-name }}
+        resource-group: your-aks-resource-group
+
+    - name: Deploy Node App to AKS
+      run: kubectl apply -f kubernetes/node-deployment.yaml
+
+
+# name: CI/CD
+
+# on:
+#   push:
+#     branches:
+#       - master
+#       - develop
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#     - name: Checkout code
+#       uses: actions/checkout@v2
+      
+#     - name: Set up Docker Buildx #for different os architecture 
+#       uses: docker/setup-buildx-action@v1
+      
+#     - name: Login to Azure Container Registry
+#       uses: azure/docker-login@v1
+#       with:
+#         login-server: myacr.azurecr.io
+#         username: ${{ secrets.ACR_USERNAME }}
+#         password: ${{ secrets.ACR_PASSWORD }}
+
+#     - name: Build and push Docker image
+#       uses: docker/build-push-action@v2
+#       with:
+#         context: .
+#         file: ./Dockerfile
+#         push: true
+#         tags: acr.azurecr.io/my-nodejs-app:latest
+
+#     - name: Deploy to AKS
+#       uses: Azure/k8s-deploy@v1
+#       with:
+#         kubeconfig: ${{ secrets.KUBE_CONFIG }}
+#         manifests: |
+#           k8s/deployment.yaml
+#           k8s/service.yaml
