--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,3 @@
-
 name: CI/CD
 
 on:
@@ -7,8 +6,6 @@ on:
       branch:
         description: 'Branch to deploy'
         required: true
-        default: 'main'
-        choices: ['main', 'develop']
 
 jobs:
   build:
@@ -23,8 +20,8 @@ jobs:
       with:
         context: .
         push: true
-        tags: your-azure-registry.azurecr.io/node-app:latest
-        login-server: your-azure-registry.azurecr.io
+        tags: myazureregistry.azurecr.io/node-app:latest
+        login-server: myazureregistry.azurecr.io
         username: ${{ secrets.ACR_USERNAME }}
         password: ${{ secrets.ACR_PASSWORD }}
 
@@ -33,24 +30,33 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Set AKS Cluster Name
-      id: set-cluster-name
+    - name: Set AKS Cluster Name and IP Address
+      id: set-cluster-name-ip
       run: |
-        if [ "${{ github.event.inputs.branch }}" == "main" ]; then
-          echo "::set-output name=cluster-name::main-cluster-name"
+        if [ "${{ github.event.inputs.branch }}" == "master" ]; then
+          echo "::set-output name=cluster-name::master-cluster"
+          echo "::set-output name=cluster-ip::10.10.10.1"  # Example IP Address for master cluster
+          echo "::set-output name=resource-group::master-aks-resource-group"
         else
-          echo "::set-output name=cluster-name::develop-cluster-name"
+          echo "::set-output name=cluster-name::develop-cluster"
+          echo "::set-output name=cluster-ip::10.10.10.2"  # Example IP Address for develop cluster
+          echo "::set-output name=resource-group::develop-aks-resource-group"
         fi
 
     - name: Azure AKS Set Context
       uses: azure/aks-set-context@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
-        cluster-name: ${{ steps.set-cluster-name.outputs.cluster-name }}
-        resource-group: your-aks-resource-group
+        cluster-name: ${{ steps.set-cluster-name-ip.outputs.cluster-name }}
+        resource-group: ${{ steps.set-cluster-name-ip.outputs.resource-group }}
 
     - name: Deploy Node App to AKS
-      run: kubectl apply -f kubernetes/node-deployment.yaml
+      run: |
+        kubectl apply -f kubernetes/node-deployment.yaml
+        echo "Application deployed to AKS Cluster: ${{ steps.set-cluster-name-ip.outputs.cluster-name }}"
+        echo "AKS Cluster IP Address: ${{ steps.set-cluster-name-ip.outputs.cluster-ip }}"
+
+
 
 
 # name: CI/CD
