--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,13 +4,13 @@ on:
   push:
     branches:
       - main
+      - master
   workflow_dispatch:
     inputs:
       branch:
         description: 'Branch to deploy'
         required: true
-        default: 'main'
-        choices: ['main', 'develop']
+       
 
 jobs:
   build:
