--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,6 +24,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
+        file: ./Dockerfile
         push: true
         tags: myazureregistry.azurecr.io/node-app:latest
         login-server: myazureregistry.azurecr.io
